--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -737,8 +737,11 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
 		width:100%;
 		padding: 0.5rem 1rem 1rem;
 	}
-	.timeline-Widget.timeline-Widget--edge{
+	.twitter-timeline.twitter-timeline-rendered{
 		display:none !important;
+	}
+	.site-footer{
+		margin-top:2rem;
 	}
 }
 @media screen  and (min-width:1024px){
@@ -776,6 +779,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
 		}
 		.twitter-timeline.twitter-timeline-rendered{
 			width:100% !important;
+			display: block !important;
 			// padding-top:5rem !important;
 			// padding-right:1rem !important;
 			// height:2000px !important;
