--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -30,6 +30,12 @@
     top: 15%;
     width: 25%;
   }
+  h2{
+    font-size: 8vw;
+    text-transform: uppercase;
+    margin-top: 4rem;
+    margin-bottom: 0;
+  }
   article {
     background: url(../../images/nature-background.png);
     background-size: contain;
@@ -37,19 +43,11 @@
     background-repeat: no-repeat;
     text-align: center;
     color: white;
-    font-family: $font__main;
     background-position: bottom;
     height: 33em;
     position: relative;
     
     
-    h2{
-      font-size: 8vw;
-      font-weight: bold;
-      text-transform: uppercase;
-      margin-top: 4rem;
-      margin-bottom: 0;
-    }
     p {
       text-align: left;
       padding-left: 12vw;
@@ -75,7 +73,14 @@
 @media screen and (min-width: 1024px) {
   .home {
     h2 {
+      color: white;
+      font-size: 3vw;
+      text-align: left;
       text-transform: uppercase;
+      border: 1px solid black;
+      background-color: black;
+      padding-right: 1em;
+      padding-left: 1em;
     }
     .desktop-bg {
       background: url(../../images/nature-background.png);
@@ -91,42 +96,57 @@
         left: auto;
       }
     }
+    .mission-eagles {
+        padding-left: 0;
+        padding-bottom: 4em;
+        .eagle-left {
+          left: 60%;
+        }
+    }
     article {
       background: none;
       background-size: 20rem;
-      height: 500px;
+      height: 30em;
       text-align: left;
       color: white;
       h2{
         margin-top: 3rem;
-        border: 1px solid black;
-        background-color: black;
-        padding-left: 2rem;
       }
       p {
         text-align: left;
         padding-left: 2rem;
         padding-right: 2rem;
         margin-top: 0; 
+        margin-right: 14em;
+        font-size: 1.7em;
       }
     }
     .front-page-news {
       display: flex;
       flex-wrap: wrap;
-      h2 {
 
-        text-align: left;
-        border: 1px solid black;
-        background-color: black;
-        padding-left: 2rem;
-        font-size: 30px;
-      }
       .front-page-news-gallery {
         display: flex;
         justify-content: space-around;
-        width: 90%;
+        width: 100%;
+        height: 10em;
+        margin: 4em 0 4em 0;
+        .news-archive-image-wrapper {
+          max-width: 33%;
+          position: relative;
+          overflow: hidden;
+          height: 200px;
+          h3 {
+            position: absolute;
+            z-index: 1;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.5);
+
+          }
+        }
       }
     }
+
     .front-page-button {
       display: flex;
       justify-content: center;
