--- a/themes/csl/sass/_typography.scss
+++ b/themes/csl/sass/_typography.scss
@@ -23,6 +23,26 @@ h1 {
 	text-transform: uppercase;
 }
 
+h1 {
+	font-size: 2rem;
+	font-weight: bold;
+}
+h2 {
+	font-size: 2rem;
+	font-weight: bold; 
+}
+
+p {
+	font-size: 1rem;
+}
+
+h1,
+h2,
+p {
+	font-family: $font__main;
+}
+
+
 /* Copy */
 
 p {
