--- a/themes/csl/sass/_variables.scss
+++ b/themes/csl/sass/_variables.scss
@@ -32,6 +32,8 @@ $alt-gray:#d3d3d3;
 
 // Typography
 
+// $font__size:
+// $font__h1: 
 $font__main: 'Lato', sans-serif;
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
