--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -65,17 +65,6 @@ section,
 summary {
   display: block; }
 
-h1 {
-  font-size: 2em;
-  font-weight: bold; }
-
-h2 {
-  font-size: 2em;
-  font-weight: bold; }
-
-p {
-  font-size: 1em; }
-
 audio,
 canvas,
 progress,
@@ -256,6 +245,22 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   text-transform: uppercase; }
+
+h1 {
+  font-size: 2rem;
+  font-weight: bold; }
+
+h2 {
+  font-size: 2rem;
+  font-weight: bold; }
+
+p {
+  font-size: 1rem; }
+
+h1,
+h2,
+p {
+  font-family: "Lato", sans-serif; }
 
 /* Copy */
 p {
@@ -1295,16 +1300,6 @@ object {
 .hero-container {
   background: url(../../images/csl-hero.png);
   background-size: cover;
-<<<<<<< HEAD
-  height: 40vh;
-  position: relative; }
-  .hero-container img {
-    position: absolute;
-    height: 55px;
-    bottom: 3vh;
-    left: 5vw; }
-
-=======
   background-position: left;
   height: 80vw;
   position: relative; }
@@ -1329,7 +1324,12 @@ object {
   top: 15%;
   width: 25%; }
 
->>>>>>> 31b1ff0e2bf170ba51572cf30bf0825a52e9591d
+.home h2 {
+  font-size: 8vw;
+  text-transform: uppercase;
+  margin-top: 4rem;
+  margin-bottom: 0; }
+
 .home article {
   background: url(../../images/nature-background.png);
   background-size: contain;
@@ -1337,16 +1337,9 @@ object {
   background-repeat: no-repeat;
   text-align: center;
   color: white;
-  font-family: "Lato", sans-serif;
   background-position: bottom;
   height: 33em;
   position: relative; }
-  .home article h2 {
-    font-size: 8vw;
-    font-weight: bold;
-    text-transform: uppercase;
-    margin-top: 4rem;
-    margin-bottom: 0; }
   .home article p {
     text-align: left;
     padding-left: 12vw;
@@ -1363,7 +1356,14 @@ object {
 
 @media screen and (min-width: 1024px) {
   .home h2 {
-    text-transform: uppercase; }
+    color: white;
+    font-size: 3vw;
+    text-align: left;
+    text-transform: uppercase;
+    border: 1px solid black;
+    background-color: black;
+    padding-right: 1em;
+    padding-left: 1em; }
   .home .desktop-bg {
     background: url(../../images/nature-background.png);
     background-size: cover; }
@@ -1375,41 +1375,51 @@ object {
       top: 4%;
       right: 1%;
       left: auto; }
+  .home .mission-eagles {
+    padding-left: 0;
+    padding-bottom: 4em; }
+    .home .mission-eagles .eagle-left {
+      left: 60%; }
   .home article {
     background: none;
     background-size: 20rem;
-    height: 500px;
+    height: 30em;
     text-align: left;
     color: white; }
     .home article h2 {
-      margin-top: 3rem;
-      border: 1px solid black;
-      background-color: black;
-      padding-left: 2rem; }
+      margin-top: 3rem; }
     .home article p {
       text-align: left;
       padding-left: 2rem;
       padding-right: 2rem;
-      margin-top: 0; }
+      margin-top: 0;
+      margin-right: 14em;
+      font-size: 1.7em; }
   .home .front-page-news {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap; }
-    .home .front-page-news h2 {
-      text-align: left;
-      border: 1px solid black;
-      background-color: black;
-      padding-left: 2rem;
-      font-size: 30px; }
     .home .front-page-news .front-page-news-gallery {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
       -ms-flex-pack: distribute;
           justify-content: space-around;
-      width: 90%; }
+      width: 100%;
+      height: 10em;
+      margin: 4em 0 4em 0; }
+      .home .front-page-news .front-page-news-gallery .news-archive-image-wrapper {
+        max-width: 33%;
+        position: relative;
+        overflow: hidden;
+        height: 200px; }
+        .home .front-page-news .front-page-news-gallery .news-archive-image-wrapper h3 {
+          position: absolute;
+          z-index: 1;
+          color: white;
+          background-color: rgba(0, 0, 0, 0.5); }
   .home .front-page-button {
     display: -webkit-box;
     display: -ms-flexbox;
