--- a/themes/csl/sass/_typography.scss
+++ b/themes/csl/sass/_typography.scss
@@ -19,29 +19,42 @@ h1, h2, h3, h4, h5, h6 {
 	clear: both;
 }
 
-h1 {
-	text-transform: uppercase;
-}
-
-h1 {
-	font-size: 2rem;
-	font-weight: bold;
-}
-h2 {
-	font-size: 2rem;
-	font-weight: bold; 
-}
-
-p {
-	font-size: 1rem;
-}
-
 h1,
 h2,
 p {
 	font-family: $font__main;
 }
 
+h1 {
+	text-transform: uppercase;
+}
+
+h1 {
+	font-size: 20px;
+	font-weight: bold;
+}
+h2 {
+	font-size: 20px;
+	font-weight: bold; 
+}
+
+p {
+	font-size: 18px;
+}
+@media screen and (min-width: 1024px) {
+	h1 {
+		font-size: 36px;
+		font-weight: bold;
+	}
+	h2 {
+		font-size: 30px;
+		font-weight: bold; 
+	}
+	
+	p {
+		font-size: 20px;
+	}
+}
 
 /* Copy */
 
