--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -243,24 +243,34 @@ textarea {
 h1, h2, h3, h4, h5, h6 {
   clear: both; }
 
-h1 {
-  text-transform: uppercase; }
-
-h1 {
-  font-size: 2rem;
-  font-weight: bold; }
-
-h2 {
-  font-size: 2rem;
-  font-weight: bold; }
-
-p {
-  font-size: 1rem; }
-
 h1,
 h2,
 p {
   font-family: "Lato", sans-serif; }
+
+h1 {
+  text-transform: uppercase; }
+
+h1 {
+  font-size: 20px;
+  font-weight: bold; }
+
+h2 {
+  font-size: 20px;
+  font-weight: bold; }
+
+p {
+  font-size: 18px; }
+
+@media screen and (min-width: 1024px) {
+  h1 {
+    font-size: 36px;
+    font-weight: bold; }
+  h2 {
+    font-size: 30px;
+    font-weight: bold; }
+  p {
+    font-size: 20px; } }
 
 /* Copy */
 p {
@@ -1432,15 +1442,13 @@ object {
   top: 15%;
   width: 25%; }
 
-<<<<<<< HEAD
 .home h2 {
+  font-size: 20px;
   font-size: 8vw;
   text-transform: uppercase;
   margin-top: 4rem;
   margin-bottom: 0; }
 
-=======
->>>>>>> eaaf0fd2081a8aa4bff1748f481aa34e0450e4bc
 .home article {
   background: url(../../images/nature-background.png);
   background-size: contain;
