--- a/themes/csl/sass/style.scss
+++ b/themes/csl/sass/style.scss
@@ -65,3 +65,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "_front-page.scss";
 @import "seasonal-events";
+@import "header";
+@import "footer";
+@import "contact-page";
+@import "weekly-events";
+@import "news-page";
