--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -20,7 +20,8 @@
 		width: 100%;
 		height: 220px;
 		margin: 1rem 0 1rem 0;
-		background-size:cover;
+    background-size:cover;
+    overflow: hidden;
 	}
 	.entry-title-wrapper{
 		position: relative;
