--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1353,7 +1353,8 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   width: 100%;
   height: 220px;
   margin: 1rem 0 1rem 0;
-  background-size: cover; }
+  background-size: cover;
+  overflow: hidden; }
 
 .term-weekly .entry-title-wrapper {
   position: relative;
