styling Story- Origin, Vision, One-House

--- a/themes/csl/sass/_variables.scss
+++ b/themes/csl/sass/_variables.scss
@@ -2,7 +2,7 @@
 
 $base__space-unit: 1.5rem;
 
-// Screen Sizes
+// Screen Size Break
 $desktop-width: 750px;
 
 // Colors
@@ -37,3 +37,5 @@ $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
+
+
