--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -5,14 +5,13 @@
 /* Story */
 .single-story, .post-type-archive-story {
   .entry-header {
-    margin: 2.5% 0 0;
     width: 100%;
     height: 100%;
-  }
 
-  .one-house-title, .entry-title {
-    padding: 0 2.5vw;
-    
+    h1 {
+      margin-top: 0;
+      padding-left: 2.5%;
+    }
   }
 
   .alt-title {
@@ -52,7 +51,6 @@
       
           @include desktop {
             display: flex;
-
           }
     }
 
@@ -69,6 +67,17 @@
     }
   }
 
+  .meet-our-team-wrapper {
+    text-align: center;
+    background-color: yellow;
+    background: url("../../images/EagleBackground.png") repeat top;
+    background-size: contain;
+    
+    h2 {
+      margin-top: 0;
+      padding-top: 2.5%;
+    }
+  }
   .meet-our-team {
     display: flex;
     flex-flow: column nowrap;
@@ -76,11 +85,14 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: yellow;
-    background: url("../../images/EagleBackground.png") repeat top;
-    background-size: contain;
+
+    @include desktop {
+      flex-flow: row wrap;
+      justify-content: space-around;
+    }
 
     .team-member {
+      flex: 0 1 35%;
       display: flex;
       flex-flow: column nowrap;
       justify-content: space-between;
@@ -103,12 +115,24 @@
 
       p.team-member__description {
         display: none;
+
+        @include desktop {
+          display: inherit;
+        }
       }
     }
   }
   /* End of One-House */
 
 /* Origin */
+  .origin-container {
+    @include desktop {
+      background-color: $teal;
+      background: url("../../images/nature-background.png") no-repeat bottom;
+      background-size: cover;
+    }
+  }
+
   .origin-wrapper {
     display: flex;
     flex-flow: column nowrap;
@@ -116,6 +140,9 @@
     @include desktop {
       flex-flow: row nowrap;
       justify-content: space-between;
+      background-color: $teal;
+      background: url("../../images/nature-background.png") no-repeat bottom;
+      background-size: cover;
     }  
 
     .origin-featured-image {
@@ -137,41 +164,67 @@
 /* End of Origin */
 
 /* Vision */
+  .vision-container {
+    h1 {
+      padding: 0;
+    }
+    @include desktop {
+      padding: 0 2.5%;
+    }
+  }  
+
   .vision-wrapper {
-    display: flex;
-    flex-flow: column nowrap;
+    display: grid;
+		grid-template-areas: "entry-header" "featured-image" "vision-content" "image-two";
+		grid-gap: $base__space-unit/2;
+		width: 100%;
+    height: auto;
     
     @include desktop {
-      flex-flow: row nowrap;
-      justify-content: space-between;
-    }  
+      // margin: 0 2.5%;
+      display: grid;
+      grid-template-areas: "entry-header featured-image" "vision-content featured-image" "vision-content image-two";
+    }
+    
+    .entry-header {
+      grid-area: entry-header;
+      margin-left: 0;
+    }
 
-    .vision-featured-image {
-      width: 100%;
-      height: auto;
+    .entry-content {
+      grid-area: vision-content;
+      // padding: 0;
+      margin-top: 0;
+
+      p {
+        margin-top: 0;
+      }
+
+      ul {
+        padding-left: 5%;
+      }
 
       @include desktop {
-        // width: 40vw;
-        flex: 0 2 50%;
-        order: 2;
-        margin: $base__space-unit 0 $base__space-unit 2.5vw;
-        
+        padding: 0;
+      }
+    }
+
+    .vision-featured-image {
+      grid-area: featured-image;
+      max-width: 100%;
+      width: 100%;
+
+      @include desktop {
+        margin-top: 2.5%;
       }
     }
 
     .vision-image-two {
-      order: 3;
+      grid-area: image-two;
+      width: 100%;
     }
-  
-  .entry-content {
-    flex: 0 1 50%;
-    margin: 0;
 
-    ul {
-      padding: 0;
-    }
   }
-}
 /* End of Vision */
 
 /* Heritage */
