--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -102,7 +102,7 @@
 	}
 }	
 
-	@media screen  and (min-width:1024px){
+	@media screen  and (min-width:$desktop-width){
 		.weekly-event-page-title{
 			padding-left: 2.5%;
 			color: #fff;
