--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -941,7 +941,7 @@ header {
           transform: rotate(-45deg);
   top: -7px; }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 750px) {
   .toggle-open {
     display: none; }
   .header-logo {
@@ -1026,13 +1026,13 @@ header {
 .footer-logo-container {
   background: url("../../images/footer-icon.png");
   border-radius: 50%;
-  width: 65px;
-  height: 50px;
-  background-color: white;
-  background-size: 50px;
-  background-position: center;
+  width: 28vw;
+  height: 26vw;
+  background-color: #fff;
+  background-size: 20vw;
+  background-position: 50%;
   background-repeat: no-repeat;
-  margin-left: 14%;
+  margin-left: 10%;
   -ms-flex-item-align: center;
       align-self: center; }
 
@@ -1062,16 +1062,27 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+  .weekday-hours p:nth-child(1), .weekend-hours p:nth-child(1) {
+    font-size: 0.75rem; }
   .weekday-hours p:nth-child(2), .weekend-hours p:nth-child(2) {
     padding-left: 1rem;
     font-size: 0.75rem;
     -ms-flex-item-align: center;
         align-self: center; }
 
+.footer-contact-info > p:nth-child(2) {
+  font-size: 0.75rem;
+  margin-top: 1rem; }
+
+.footer-contact-info > p:nth-child(3) {
+  font-size: 0.75rem;
+  margin-bottom: 1rem;
+  margin-top: 0; }
+
 .sub-menu {
   display: none; }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 750px) {
   .site-info {
     position: relative; }
   .footer-nav {
@@ -1082,15 +1093,15 @@ header {
     -ms-flex-pack: distribute;
         justify-content: space-around;
     position: absolute;
-    width: 70%;
-    position: absolute;
+    width: 63%;
     bottom: 35%;
-    margin-left: 10%; }
+    margin-left: 10%;
+    padding-left: 1rem; }
   .footer-logo-container {
-    height: 75%;
-    width: 15%;
+    height: 10vw;
+    width: 13vw;
     margin-left: 1%;
-    background-size: 120px; }
+    background-size: 9vw; }
   .footer-contact-info {
     font-size: 0.75rem; }
   .sub-menu {
@@ -1271,7 +1282,7 @@ header {
 div.wpcf7-response-output, div.wpcf7-validation-errors {
   display: none !important; }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 750px) {
   .page-template-contact .entry-content {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1440,7 +1451,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
 .term-weekly .site-main .type-event:nth-child(3n+3) .entry-title-wrapper {
   background-color: rgba(255, 203, 51, 0.75); }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 750px) {
   .term-weekly .weekly-event-page-title {
     padding-left: 2.5%;
     color: #fff;
@@ -1524,7 +1535,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
 .post-type-archive-news .site-footer {
   margin-top: 2rem; }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 750px) {
   .post-type-archive-news #primary {
     display: -webkit-box;
     display: -ms-flexbox;
