--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -74,8 +74,8 @@ header{
 		display:flex;
 		align-self:center;
 		margin-top: 2rem;
-		color:white;
 		.fa{
+			color:white;
 			font-size:1.5rem;
 			padding-right:1rem;
 		}
@@ -145,6 +145,7 @@ header{
 		position: absolute;
 		height: 5rem;
 		padding-top:1rem;
+		width: 28vw;
 	}
 	.menu{
 		display: flex;
@@ -164,7 +165,7 @@ header{
 		max-width: 60%;
     flex-basis: 90%;
     display: flex;
-    font-size: 1.25rem;
+    font-size: 1rem;
     margin-left: auto;
 	}
 }	
