--- a/themes/csl/sass/_news-page.scss
+++ b/themes/csl/sass/_news-page.scss
@@ -57,7 +57,7 @@
         width:40%;
       }
       .type-news{
-        height:18rem;
+        height:30vw;
         margin-bottom:0.5rem;
       }
       .article-title{
