--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -893,9 +893,9 @@ header {
     display: flex;
     -ms-flex-item-align: center;
         align-self: center;
-    margin-top: 2rem;
-    color: white; }
+    margin-top: 2rem; }
     .main-navigation .social-icons .fa {
+      color: white;
       font-size: 1.5rem;
       padding-right: 1rem; }
 
@@ -956,7 +956,8 @@ header {
     display: block;
     position: absolute;
     height: 5rem;
-    padding-top: 1rem; }
+    padding-top: 1rem;
+    width: 28vw; }
   .menu {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -980,7 +981,7 @@ header {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    font-size: 1.25rem;
+    font-size: 1rem;
     margin-left: auto; } }
 
 .site-info {
@@ -990,7 +991,7 @@ header {
   height: auto;
   padding-top: 2rem;
   font-size: 1.25rem;
-  margin-left: 1rem;
+  margin-left: 11vw;
   margin-right: 1rem;
   padding-left: 0; }
   .footer-nav-wrapper a {
@@ -1085,6 +1086,9 @@ header {
 @media screen and (min-width: 750px) {
   .site-info {
     position: relative; }
+  .footer-nav-wrapper {
+    font-size: 1rem;
+    margin-left: 0; }
   .footer-nav {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -1093,9 +1097,9 @@ header {
     -ms-flex-pack: distribute;
         justify-content: space-around;
     position: absolute;
-    width: 63%;
+    width: 67vw;
     bottom: 35%;
-    margin-left: 10%;
+    margin-left: 10vw;
     padding-left: 1rem; }
   .footer-logo-container {
     height: 10vw;
@@ -1548,7 +1552,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
     background: #000000;
     width: 40%; }
   .post-type-archive-news .type-news {
-    height: 18rem;
+    height: 30vw;
     margin-bottom: 0.5rem; }
   .post-type-archive-news .article-title {
     font-size: 1rem; }
