added direct links to facebook and twitter icons for the contact page

--- a/themes/csl/sass/_news-page.scss
+++ b/themes/csl/sass/_news-page.scss
@@ -18,7 +18,7 @@
     }
     .type-news{
       position: relative;
-      height:15rem;
+      height:75vw;
       flex-basis:49%;
       margin-top:0.5rem;
       background-size: cover;
