--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -25,9 +25,10 @@
 
 	.entry-title{
 		position: absolute;
-		top:-1%;
-		left:5%;
-		text-transform: uppercase;
+    top: -2%;
+    left: 4%;
+    text-transform: uppercase;
+    font-size: 30px;
 	}
 	.contact-page-contact-info{
 		display: flex;
@@ -100,9 +101,12 @@
 		p:nth-child(1){
 			font-size:1.5rem;
 			font-weight:bold;
+			margin-bottom:1rem
 		}
-		a:nth-child(2){
-			margin-top:1rem;
+		a{
+			text-decoration: none;
+			font-weight:bold;
+			color:black;
 		}
 	}
 	.eagle-logo{
