--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -121,13 +121,12 @@
 .alert-container{
 	display:none;
 	position: fixed;
-	left: 5%;
-	right:5%;
-	top: 50%;
-	transform: translateY(-50%);
+	position: fixed;
+	top: 0%;
+	height: 100%;
 	z-index: 1;
-	background-color: rgba(29, 175, 184, 0.75);
-	width: 90%;
+	width: 100%;
+	background-color: rgba(0,0,0,0.4);
 }
 .info-alert{
 	display: flex;
@@ -136,6 +135,10 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: 90%;
+	background-color: rgba(29, 175, 184, 0.75);
+	position: absolute;
+	left: 5%;
+	top: 40%;
 	.info-alert-text{
 		flex-basis:80%;
 		color:#FFFFFF;
