--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1236,14 +1236,12 @@ header {
 .alert-container {
   display: none;
   position: fixed;
-  left: 5%;
-  right: 5%;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  position: fixed;
+  top: 0%;
+  height: 100%;
   z-index: 1;
-  background-color: rgba(29, 175, 184, 0.75);
-  width: 90%; }
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.4); }
 
 .info-alert {
   display: -webkit-box;
@@ -1256,7 +1254,11 @@ header {
           justify-content: center;
   margin-left: auto;
   margin-right: auto;
-  width: 90%; }
+  width: 90%;
+  background-color: rgba(29, 175, 184, 0.75);
+  position: absolute;
+  left: 5%;
+  top: 40%; }
   .info-alert .info-alert-text {
     -ms-flex-preferred-size: 80%;
         flex-basis: 80%;
