--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -1,5 +1,7 @@
 /* MOBILE MENU	*/
-
+.display{
+	display:block
+}
 .line1, .line2, .line3 {
 	margin-top:5px;
 	background-color:white;
@@ -26,6 +28,7 @@
 }
 
 .mobile-menu{
+	display: none;
 	z-index:2; 
 	font-size:1rem;
 	width:85%; 
@@ -113,8 +116,8 @@ header{
 }
 //animate shit//
   .line1-active {
-    transform: rotate(270deg);
-    top:5px;
+    transform: rotate(225deg);
+    top: 8px;
   }
       
   .line2-active {
