--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -819,6 +819,9 @@ object {
       text-transform: uppercase; } }
 
 /* MOBILE MENU	*/
+.display {
+  display: block; }
+
 .line1, .line2, .line3 {
   margin-top: 5px;
   background-color: white;
@@ -846,6 +849,7 @@ object {
   z-index: 9999; }
 
 .mobile-menu {
+  display: none;
   z-index: 2;
   font-size: 1rem;
   width: 85%;
@@ -928,9 +932,9 @@ header {
   display: none; }
 
 .line1-active {
-  -webkit-transform: rotate(270deg);
-          transform: rotate(270deg);
-  top: 5px; }
+  -webkit-transform: rotate(225deg);
+          transform: rotate(225deg);
+  top: 8px; }
 
 .line2-active {
   -webkit-transform: rotate(45deg);
