--- a/themes/csl/sass/style.scss
+++ b/themes/csl/sass/style.scss
@@ -70,3 +70,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "contact-page";
 @import "weekly-events";
 @import "news-page";
+@import "story";
