--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1523,7 +1523,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
 .post-type-archive-news .site-footer {
   margin-top: 2rem; }
 
-@media screen and (min-width: 650px) {
+@media screen and (min-width: 1024px) {
   .post-type-archive-news #primary {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1556,3 +1556,292 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   .post-type-archive-news .twitter-timeline.twitter-timeline-rendered {
     width: 100% !important;
     display: block !important; } }
+
+/*--------------------------------------------------------------
+# Story
+--------------------------------------------------------------*/
+/* Story */
+.single-story, .post-type-archive-story {
+  /* One-House */
+  /* End of One-House */
+  /* Origin */
+  /* End of Origin */
+  /* Vision */
+  /* End of Vision */
+  /* Heritage */
+  /* End of Heritage */ }
+  .single-story .entry-header, .post-type-archive-story .entry-header {
+    width: 100%;
+    height: 100%;
+    padding: 5% 0 2.5%; }
+    @media (min-width: 1024px) {
+      .single-story .entry-header .entry-title, .post-type-archive-story .entry-header .entry-title {
+        color: #ffffff;
+        background-color: #000000;
+        width: 25%; } }
+    .single-story .entry-header h1, .post-type-archive-story .entry-header h1 {
+      margin: 0;
+      padding: 0 2.5%; }
+  .single-story .alt-title, .post-type-archive-story .alt-title {
+    text-transform: none;
+    font-weight: 500;
+    color: #ffffff; }
+  .single-story .entry-content, .post-type-archive-story .entry-content {
+    padding: 0 2.5%; }
+    .single-story .entry-content p, .post-type-archive-story .entry-content p {
+      margin-top: 0; }
+  .single-story .one-house-container .entry-header, .post-type-archive-story .one-house-container .entry-header {
+    padding: 0; }
+  @media (min-width: 1024px) {
+    .single-story .one-house-container .one-house-title-mobile, .post-type-archive-story .one-house-container .one-house-title-mobile {
+      display: none; } }
+  @media (min-width: 1024px) {
+    .single-story .one-house-container .one-house-wrapper-desktop, .post-type-archive-story .one-house-container .one-house-wrapper-desktop {
+      background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4)));
+      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+      padding: 2.5%;
+      width: 60%; } }
+  .single-story .one-house-container .one-house-title-desktop, .post-type-archive-story .one-house-container .one-house-title-desktop {
+    display: none;
+    padding: 0; }
+    @media (min-width: 1024px) {
+      .single-story .one-house-container .one-house-title-desktop, .post-type-archive-story .one-house-container .one-house-title-desktop {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        color: #ffffff; } }
+  @media (min-width: 1024px) {
+    .single-story .one-house-container .entry-content-mobile, .post-type-archive-story .one-house-container .entry-content-mobile {
+      display: none; } }
+  .single-story .one-house-container .entry-content-desktop, .post-type-archive-story .one-house-container .entry-content-desktop {
+    display: none; }
+    @media (min-width: 1024px) {
+      .single-story .one-house-container .entry-content-desktop, .post-type-archive-story .one-house-container .entry-content-desktop {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        color: #ffffff; } }
+  .single-story .one-house-container .one-house-hero[style], .post-type-archive-story .one-house-container .one-house-hero[style] {
+    height: 50vh;
+    width: 100%;
+    background-position: center !important;
+    background-repeat: no-repeat;
+    background-size: cover !important; }
+    @media (min-width: 1024px) {
+      .single-story .one-house-container .one-house-hero[style], .post-type-archive-story .one-house-container .one-house-hero[style] {
+        height: 100vh;
+        width: 100%;
+        padding: 5% 0 2.5%; } }
+  .single-story .one-house-container .meet-our-team-wrapper, .post-type-archive-story .one-house-container .meet-our-team-wrapper {
+    text-align: center;
+    background-color: yellow;
+    background: url("../../images/EagleBackground.png") repeat top;
+    background-size: contain; }
+    .single-story .one-house-container .meet-our-team-wrapper h2, .post-type-archive-story .one-house-container .meet-our-team-wrapper h2 {
+      margin-top: 0;
+      padding-top: 2.5%; }
+  .single-story .one-house-container .meet-our-team, .post-type-archive-story .one-house-container .meet-our-team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+    height: 100%; }
+    @media (min-width: 1024px) {
+      .single-story .one-house-container .meet-our-team, .post-type-archive-story .one-house-container .meet-our-team {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: row wrap;
+                flex-flow: row wrap;
+        -ms-flex-pack: distribute;
+            justify-content: space-around; } }
+    .single-story .one-house-container .meet-our-team .team-member, .post-type-archive-story .one-house-container .meet-our-team .team-member {
+      -webkit-box-flex: 0;
+          -ms-flex: 0 1 35%;
+              flex: 0 1 35%;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-flow: column nowrap;
+              flex-flow: column nowrap;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      max-height: 100%;
+      width: 50%;
+      text-align: center; }
+      .single-story .one-house-container .meet-our-team .team-member .team-member__image, .post-type-archive-story .one-house-container .meet-our-team .team-member .team-member__image {
+        margin: 5% 0 2%; }
+      .single-story .one-house-container .meet-our-team .team-member .team-member__name, .post-type-archive-story .one-house-container .meet-our-team .team-member .team-member__name {
+        margin: 2% 0; }
+      .single-story .one-house-container .meet-our-team .team-member .team-member__title, .post-type-archive-story .one-house-container .meet-our-team .team-member .team-member__title {
+        margin: 2% 0; }
+      .single-story .one-house-container .meet-our-team .team-member p.team-member__description, .post-type-archive-story .one-house-container .meet-our-team .team-member p.team-member__description {
+        display: none; }
+        @media (min-width: 1024px) {
+          .single-story .one-house-container .meet-our-team .team-member p.team-member__description, .post-type-archive-story .one-house-container .meet-our-team .team-member p.team-member__description {
+            display: inherit; } }
+  @media (min-width: 1024px) {
+    .single-story .origin-container, .post-type-archive-story .origin-container {
+      background-color: #1DAFB8;
+      background: url("../../images/nature-background.png") no-repeat bottom;
+      background-size: cover; } }
+  .single-story .origin-wrapper, .post-type-archive-story .origin-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap; }
+    @media (min-width: 1024px) {
+      .single-story .origin-wrapper, .post-type-archive-story .origin-wrapper {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: row nowrap;
+                flex-flow: row nowrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between; } }
+    .single-story .origin-wrapper .origin-featured-image, .post-type-archive-story .origin-wrapper .origin-featured-image {
+      width: 100%;
+      height: auto; }
+      .single-story .origin-wrapper .origin-featured-image img, .post-type-archive-story .origin-wrapper .origin-featured-image img {
+        min-width: 100%;
+        min-height: 100%; }
+      @media (min-width: 1024px) {
+        .single-story .origin-wrapper .origin-featured-image, .post-type-archive-story .origin-wrapper .origin-featured-image {
+          -webkit-box-flex: 0;
+              -ms-flex: 0 2 50%;
+                  flex: 0 2 50%;
+          margin: 0 0 1.5rem 2.5vw; }
+          .single-story .origin-wrapper .origin-featured-image img, .post-type-archive-story .origin-wrapper .origin-featured-image img {
+            min-height: 10%; } }
+    .single-story .origin-wrapper .entry-content, .post-type-archive-story .origin-wrapper .entry-content {
+      -webkit-box-flex: 0;
+          -ms-flex: 0 1 50%;
+              flex: 0 1 50%;
+      margin: 0; }
+  @media (min-width: 1024px) {
+    .single-story .vision-container, .post-type-archive-story .vision-container {
+      padding: 2.5% 2.5% 0; }
+      .single-story .vision-container h1, .post-type-archive-story .vision-container h1 {
+        padding: 0; } }
+  .single-story .vision-wrapper, .post-type-archive-story .vision-wrapper {
+    display: grid;
+    grid-template-areas: "entry-header" "featured-image" "vision-content" "image-two";
+    grid-gap: 0.75rem;
+    width: 100%;
+    height: auto; }
+    @media (min-width: 1024px) {
+      .single-story .vision-wrapper, .post-type-archive-story .vision-wrapper {
+        display: grid;
+        grid-template-areas: "entry-header featured-image" "vision-content featured-image" "vision-content image-two"; } }
+    .single-story .vision-wrapper .entry-header, .post-type-archive-story .vision-wrapper .entry-header {
+      grid-area: entry-header;
+      margin-left: 0; }
+    .single-story .vision-wrapper .entry-content, .post-type-archive-story .vision-wrapper .entry-content {
+      grid-area: vision-content;
+      margin-top: 0; }
+      .single-story .vision-wrapper .entry-content p, .post-type-archive-story .vision-wrapper .entry-content p {
+        margin-top: 0; }
+      .single-story .vision-wrapper .entry-content ul, .post-type-archive-story .vision-wrapper .entry-content ul {
+        padding-left: 5%; }
+      @media (min-width: 1024px) {
+        .single-story .vision-wrapper .entry-content, .post-type-archive-story .vision-wrapper .entry-content {
+          padding: 0; } }
+    .single-story .vision-wrapper .vision-featured-image, .post-type-archive-story .vision-wrapper .vision-featured-image {
+      grid-area: featured-image;
+      max-width: 100%;
+      width: 100%; }
+      .single-story .vision-wrapper .vision-featured-image img, .post-type-archive-story .vision-wrapper .vision-featured-image img {
+        min-width: 100%;
+        min-height: 100%; }
+      @media (min-width: 1024px) {
+        .single-story .vision-wrapper .vision-featured-image, .post-type-archive-story .vision-wrapper .vision-featured-image {
+          margin-top: 5%; }
+          .single-story .vision-wrapper .vision-featured-image img, .post-type-archive-story .vision-wrapper .vision-featured-image img {
+            min-height: 10%; } }
+    .single-story .vision-wrapper .vision-image-two, .post-type-archive-story .vision-wrapper .vision-image-two {
+      grid-area: image-two;
+      width: 100%; }
+      .single-story .vision-wrapper .vision-image-two img, .post-type-archive-story .vision-wrapper .vision-image-two img {
+        min-width: 100%;
+        min-height: 100%; }
+      @media (min-width: 1024px) {
+        .single-story .vision-wrapper .vision-image-two img, .post-type-archive-story .vision-wrapper .vision-image-two img {
+          min-height: 10%; } }
+  @media (min-width: 1024px) {
+    .single-story .heritage-container, .post-type-archive-story .heritage-container {
+      background-color: #D91F18;
+      background: url("../../images/orca-background.png") no-repeat center;
+      background-size: cover; } }
+  .single-story .heritage-container .heritage-wrapper, .post-type-archive-story .heritage-container .heritage-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap; }
+    @media (min-width: 1024px) {
+      .single-story .heritage-container .heritage-wrapper, .post-type-archive-story .heritage-container .heritage-wrapper {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-flow: row wrap;
+                flex-flow: row wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between; } }
+  .single-story .heritage-container .heritage-featured-image, .post-type-archive-story .heritage-container .heritage-featured-image {
+    width: 100%;
+    height: auto; }
+    .single-story .heritage-container .heritage-featured-image img, .post-type-archive-story .heritage-container .heritage-featured-image img {
+      min-width: 100%;
+      min-height: 100%; }
+    @media (min-width: 1024px) {
+      .single-story .heritage-container .heritage-featured-image, .post-type-archive-story .heritage-container .heritage-featured-image {
+        -webkit-box-ordinal-group: 3;
+            -ms-flex-order: 2;
+                order: 2;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 2 50%;
+                flex: 0 2 50%;
+        padding: 2.5%;
+        max-height: 50%; } }
+  .single-story .heritage-container .heritage-image-two, .post-type-archive-story .heritage-container .heritage-image-two {
+    display: none; }
+    @media (min-width: 1024px) {
+      .single-story .heritage-container .heritage-image-two, .post-type-archive-story .heritage-container .heritage-image-two {
+        -webkit-box-ordinal-group: 4;
+            -ms-flex-order: 3;
+                order: 3;
+        -webkit-box-flex: 0;
+            -ms-flex: 0 2 50%;
+                flex: 0 2 50%;
+        display: inherit;
+        padding: 2.5%; } }
+  @media (min-width: 1024px) {
+    .single-story .heritage-container .entry-content, .post-type-archive-story .heritage-container .entry-content {
+      -webkit-box-flex: 0;
+          -ms-flex: 0 1 100%;
+              flex: 0 1 100%;
+      margin: 0;
+      -webkit-column-count: 2;
+              column-count: 2;
+      -webkit-column-gap: 3rem;
+              column-gap: 3rem; } }
