--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -42,6 +42,7 @@
 			flex-wrap: wrap;
 			justify-content: center;
 			align-items:center;
+			margin-top:1rem;
 		}
 		.alt-title{
 			color:$alt-gray;
@@ -103,6 +104,9 @@
 }	
 
 	@media screen  and (min-width:$desktop-width){
+		.title{
+			margin-top:0.5rem;
+		}
 		.weekly-event-page-title{
 			padding-left: 2.5%;
 			color: #fff;
@@ -112,7 +116,6 @@
 			display: flex;
 			justify-content: flex-start;
 			align-items: center;
-			font-size: 2rem;
 		}
 		.site-main{
 			display: flex;
