--- a/themes/csl/sass/_contact-page.scss
+++ b/themes/csl/sass/_contact-page.scss
@@ -25,6 +25,7 @@
 		display:flex;
 		flex-direction: column;
 		margin-left:1rem;
+		z-index:9999;
 		a{
 			color:$black;
 			text-decoration: none;
