added padding to the header social media icons

--- a/themes/csl/sass/_header.scss
+++ b/themes/csl/sass/_header.scss
@@ -3,10 +3,11 @@
 	display:block
 }
 .header-widget-area{
+	padding-right:1%;
 	.csl-social-media-class{
 	display:flex;
 	flex-direction:row;
-	font-size: 2rem;
+	font-size: 1.25rem;
 	margin-bottom: 0;
 	align-items: flex-end;
 	height: 4rem;
