--- a/themes/csl/sass/_variables.scss
+++ b/themes/csl/sass/_variables.scss
@@ -2,13 +2,8 @@
 
 $base__space-unit: 1.5rem;
 
-<<<<<<< HEAD
 // Screen Sizes
 $desktop-width: 750px;
-=======
-// Screen Size Break
-$desktop-width: 1024px;
->>>>>>> 54dc23d9b52de52386e81173857c1c9a23a2b67b
 
 // Colors
 
@@ -34,6 +29,7 @@ $teal:#1DAFB8;
 $secondary-teal:#18949a;
 $red:#D91F18;
 $alt-gray:#d3d3d3;
+$trans-black: rgba(0,0,0,0.5);
 
 // Typography
 
