--- a/themes/csl/sass/_owl-theme-default.scss
+++ b/themes/csl/sass/_owl-theme-default.scss
@@ -60,13 +60,19 @@
     .owl-theme .owl-dots .owl-dot span {
       width: 10px;
       height: 10px;
-      border: 1px solid black;
+      border: 1px solid white;
       margin: 5px 7px;
-      background:$trans-black;
+      @include desktop {
+        width: 17px;
+        height: 17px;
+        border: 1px solid white;
+        margin: 5px 14px;
+      }
+      background:rgba(0,0,0,0);
       display: block;
       -webkit-backface-visibility: visible;
       transition: opacity 200ms ease;
       border-radius: 30px; }
     .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-      border: 2px solid black;
-      background: rgba(255,255,255,0.5); }
+      border: none;
+      background: white; }
