fixed outstanding issues

--- a/themes/csl/sass/_weekly-events.scss
+++ b/themes/csl/sass/_weekly-events.scss
@@ -57,6 +57,7 @@
 			content:']';
 		}
 	}
+	.entry-title-wrapper { transition: 1s; }
 	.entry-title-wrapper:hover{
 		height:100%;
 		flex-basis:100%;
